# houdini-worker

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  RFC.md  houdini_sidecar.py  requirements.txt  run.sh  test_client.html  test_client.py
assets/: Mythica.RockGenerator.1.0.hda  Mythica.Rockify.1.0.hda  SM_Shape_04_a.usd  mythica.agave_leaf.1.0.hda  mythica.agave_plant.1.0.hda  mythica.aloe_leaf.1.0.hda  mythica.aloe_plant.1.0.hda  mythica.crystal.1.0.hda  mythica.echevaria_plant.1.0.hda  mythica.echeveria_leaf.1.0.hda  mythica.saguaro_cactus.1.0.hda  mythica.saguaro_cactus.1.1.hda  mythica.saguaro_flower.1.0.hda  test_cube.hda
blender_scenetalk/: README.md  __init__.py  async_wrap.py  build-lib.sh  build_message.py  build_object.py  cook.py  hda_db.py  model_db.py  requirements.txt  scenetalk_client.py  scenetalk_connection.py  selection.py
blender_scenetalk/<TemporaryDirectory '/var/folders/xn/4xm06ddn3d9f9zflb1qsrmzr0000gn/T/tmpnv_6l2od'>/: Cube.usd
blender_scenetalk/operators/: connection_operators.py  hda_object_operators.py  object_operators.py
blender_scenetalk/panels/: connection_panel.py  hda_object_panel.py  object_panel.py  scene_panel.py  update_hooks.py
blender_scenetalk/panels/models/: __init__.py  mythica_agave.py  mythica_crystals.py  mythica_rockify.py  mythica_rocks.py  mythica_sauguro.py
blender_scenetalk/properties/: __init__.py  gen_object_properties.py  scenetalk_properties.py
blender_scenetalk/properties/models/: __init__.py  mythica_agave.py  mythica_crystals.py  mythica_rockify.py  mythica_rocks.py  mythica_sauguro.py
controller/: advertise.py  api_client.py  launch_worker.py  main.py  models.py  package_resolver.py  requirements.txt  websocket_client.py
src/: automation.cpp  automation.h  file_cache.cpp  file_cache.h  houdini_session.cpp  houdini_session.h  interrupt.cpp  interrupt.h  main.cpp  session.cpp  session.h  stream_writer.cpp  stream_writer.h  types.cpp  types.h  util.cpp  util.h  websocket.cpp  websocket.h
src/scenetalk/: CMakeLists.txt  attributes.h  buffer_pool.cpp  buffer_pool.h  decode_attributes.cpp  decode_attributes.h  decode_reader_items.cpp  decode_reader_items.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  example.cpp  file_ref.cpp  file_ref.h  frame.cpp  frame.h  frame_decoder.cpp  frame_decoder.h  net_buffer.cpp  net_buffer.h  net_buffer.hpp  reader.cpp  reader.h  reader_item_cbor.cpp
src/scenetalk/tests/: CMakeLists.txt  test_buffer_pool.cpp  test_decoder.cpp  test_encoder.cpp  test_file_ref.cpp  test_frame.h  test_frame_decoder.cpp  test_frames.cpp  test_net_buffer.cpp  test_reader.cpp
